# vr-teleoperation

./: .gitignore  .gitmodules  README.md
pepper_naoqi_py/: CMakeLists.txt  README.md  package.xml  setup.py
pepper_naoqi_py/launch/: gstreamer.launch
pepper_naoqi_py/scripts/: audio.py  audio_playback.py  nao_motion_controll.py  nao_node.py  nao_speaker.py  nao_virtual.py  old_nao_speaker.py  pepper_motion_controll.py  pepper_node.py  pepper_virtual.py  pepper_virtual_motion_controll.py
pepper_vr_controller/: CMakeLists.txt  imgui.ini  package.xml
pepper_vr_controller/include/pepper_vr_controller/: CameraView.h  RobotControllerApp.h  RosNode.h
pepper_vr_controller/launch/: full_system.launch
pepper_vr_controller/src/: CameraView.cpp  EntryPoint.cpp  RobotControllerApp.cpp  RosNode.cpp
pepper_vr_controller/vendors/rendering_engine/: CMakeLists.txt
pepper_vr_controller/vendors/rendering_engine/VRInput/: actions.json  vive_bindings.json
pepper_vr_controller/vendors/rendering_engine/include/: rendering_engine.h
pepper_vr_controller/vendors/rendering_engine/include/rendering_engine/: Application.h  Assertions.h  Canvas.h  GLErrorHandling.h  GUI.h  Input.h  KeyCodes.h  Mesh.h  Model.h  MouseCodes.h  PerspectiveCamera.h  PerspectiveCameraController.h  ReferenceFrame.h  Timestep.h  Utilities.h  VRCamera.h  VRCodes.h  VRHmd.h  VRInput.h  VRSystem.h  Vertex.h  Window.h  WindowOverlay.h
pepper_vr_controller/vendors/rendering_engine/include/rendering_engine/Events/: ApplicationEvent.h  CanvasEvent.h  Event.h  KeyEvent.h  MouseEvent.h  VREvent.h
pepper_vr_controller/vendors/rendering_engine/include/rendering_engine/Renderer/: Framebuffer.h  IDrawable.h  Material.h  Renderer.h  Shader.h  Texture2D.h
pepper_vr_controller/vendors/rendering_engine/models/medieval_sword/: model.dae
pepper_vr_controller/vendors/rendering_engine/shaders/: MainShader.frag  MainShader.vert  RefFrame.frag  RefFrame.vert  WindowOverlay.frag  WindowOverlay.vert
pepper_vr_controller/vendors/rendering_engine/src/: Application.cpp  Canvas.cpp  GUI.cpp  Input.cpp  Mesh.cpp  Model.cpp  PerspectiveCamera.cpp  PerspectiveCameraController.cpp  ReferenceFrame.cpp  Utilities.cpp  VRCamera.cpp  VRHmd.cpp  VRInput.cpp  VRSystem.cpp  Window.cpp  WindowOverlay.cpp
pepper_vr_controller/vendors/rendering_engine/src/Renderer/: Framebuffer.cpp  Material.cpp  Renderer.cpp  Shader.cpp  Texture2D.cpp
