<?xml version="1.0"?>
<package format="2">
    <name>pepper_naoqi_py</name>
    <version>0.0.1</version>
    <description>The pepper_naoqi_py package</description>
    <maintainer email="yomzyo@gmail.com">yomzyo</maintainer>
    <license>TODO</license>
  
    <buildtool_depend>catkin</buildtool_depend>
    
    <depend>rospy</depend>
    <depend>cv_bridge</depend>
    <depend>sensor_msgs</depend>
    
    <export>
    </export>
</package>