<?xml version="1.0"?>
<package format="2">
  <name>pepper_vr_controller</name>
  <version>0.0.0</version>
  <description>The pepper_vr_controller package</description>
  <maintainer email="yomzyo@todo.todo">yomzyo</maintainer>
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>tf</depend>
  <depend>naoqi_bridge_msgs</depend>
  <depend>sensor_msgst</depend>
  <depend>cv_bridget</depend>
  <depend>image_transport</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
